--- a/.github/workflows/temp2.yml
+++ b/.github/workflows/temp2.yml
@@ -1,22 +1,33 @@
-name: Auto Run Tests on Pull Request
+name: Conditional Steps Example
+
 on:
-  pull_request:
-    branches:
-      - main
+  push:
+    branches: [ main, develop ]
+
 jobs:
-  build:
+  test-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
+      - name: Checkout code
         uses: actions/checkout@v4
-      - name: nodejs setup
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
-      - name: dependencies
-        run: npm ci 
-      - name: comment
-        uses: peter-evans/create-or-update-comment@v5
-        with:
-          issue-number: ${{ github.event.pull_request.number }}
-          body: "✅ All tests passed for this PR!"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests
+        run: npm test
+
+      - name: Deploy to staging
+        if: github.ref == 'refs/heads/develop' && success()
+        run: echo "Deploying to staging environment..."
+
+      - name: current head
+        run: echo "${{github.ref}}"
+
+      - name: Deploy to production
+        if: github.ref == 'refs/heads/main' && success()
+        run: echo "Deploying to production environment..."
+
+      - name: Notify on failure
+        if: failure()
+        run: echo "Tests failed! Notifying the team..."
