--- a/.github/workflows/temp2.yml
+++ b/.github/workflows/temp2.yml
@@ -1,30 +1,35 @@
-name: Conditional Steps Example
+name: Dependent Jobs Example
 
 on:
   push:
-    branches: [ main, dev ]
+    branches: [ main ]
 
 jobs:
-  test-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Build project
+        run: echo "Building project..."
 
-      - name: Install dependencies
-        run: npm ci
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Run tests
+        run: echo "Running tests after build..."
 
-      - name: Deploy to staging
-        if: github.ref == 'refs/heads/dev' && success()
-        run: echo "Deploying to staging environment..."
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Deploy application
+        run: echo "Deploying application after successful tests..."
 
-      - name: current head
-        run: echo "${{github.ref}}"
-
-      - name: Deploy to production
-        if: github.ref == 'refs/heads/main' && success()
-        run: echo "Deploying to production environment..."
-
-      - name: Notify on failure
-        if: failure()
-        run: echo "Tests failed! Notifying the team..."
+  final:
+    runs-on:  ubuntu-latest
+    needs: [build,test,deploy]
+    steps:
+      - name: checker
+        run: echo "FINAL JOB IS DONE"
