--- a/.github/workflows/temp2.yml
+++ b/.github/workflows/temp2.yml
@@ -2,7 +2,7 @@ name: Dependent Jobs Example
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main,dev ]
 
 jobs:
   build:
@@ -12,6 +12,24 @@ jobs:
         uses: actions/checkout@v4
       - name: Build project
         run: echo "Building project..."
+      - name: Print GitHub Actions environment variables
+        id: print_env
+        run: |
+          echo "GITHUB_REPOSITORY: ${{ github.repository }}"
+          echo "GITHUB_REF: $GITHUB_REF"
+          echo "GITHUB_SHA: ${{ github.sha }}"
+          echo "GITHUB_RUN_ID: $GITHUB_RUN_ID"
+          echo "GITHUB_RUN_NUMBER: $GITHUB_RUN_NUMBER"
+          echo "GITHUB_WORKFLOW: $GITHUB_WORKFLOW"
+          echo "GITHUB_JOB: $GITHUB_JOB"
+          echo "GITHUB_ACTOR: $GITHUB_ACTOR"
+          echo "RUNNER_NAME: $RUNNER_NAME"
+          echo "RUNNER_OS: $RUNNER_OS"
+          echo "RUNNER_ARCH: $RUNNER_ARCH"
+          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
+          echo "GITHUB_ACTION: $GITHUB_ACTION"
+          echo "GITHUB_ACTIONS: $GITHUB_ACTIONS"
+
 
   test:
     runs-on: ubuntu-latest
@@ -19,6 +37,12 @@ jobs:
     steps:
       - name: Run tests
         run: echo "Running tests after build..."
+      
+
+
+         
+
+
 
   deploy:
     runs-on: ubuntu-latest
