--- a/templates/temp6.yml
+++ b/templates/temp6.yml
@@ -1,22 +1,26 @@
-name: Build Script Workflow
+name: Set Env Using Workflow Command
 
 on:
   push:
-    branches: [ main,dev ]
+    branches: [ main , dev]
 
 jobs:
-  build:
+  dynamic-env:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Run inline script
+      - name: Generate timestamp
         run: |
-          echo "Starting build..."
-          mkdir -p build
-          echo "Build folder created"
-      - name: perms
-        run: chmod +x ./scripts/build.sh
-      - name: Run external script
-        run: ./scripts/build.sh
+          TIMESTAMP=$(date +%Y%m%d%H%M%S)
+          echo "BUILD_TIMESTAMP=$TIMESTAMP" >> $GITHUB_ENV
+
+      - name: Print dynamic env variable
+        run: |
+         echo "Build timestamp: $BUILD_TIMESTAMP"
+
+      - name: Use dynamic variable in command
+        run: |
+          mkdir "release-$BUILD_TIMESTAMP"
+          echo "Created folder release-$BUILD_TIMESTAMP"
