--- a/.github/workflows/temp2.yml
+++ b/.github/workflows/temp2.yml
@@ -1,32 +1,41 @@
-name: Publish Package
-
+name: using GHCR
 on:
-  push:
-    branches: [main,dev]
-      
-
+    push:
+        branches:   [main, dev]
+env:
+      IMAGE_NAME: python-image
 jobs:
-  publish:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write 
-
+  pre-req:
+    runs-on:  ubuntu-latest
+    env:
+      REGISTRY: ghcr.io
     steps:
-      - name: Checkout code
+      - name: to checkout code
         uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: auth to ghcr
+        uses: docker/login-action@v3
         with:
-          node-version: '20'
-          
-
-      - name: Authenticate to GitHub Packages
-        run: npm config set //npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Publish package
-        run: npm publish  
+          registry: ${{env.REGISTRY}}
+          username: ${{github.actor}}
+          password: ${{secrets.GITHUB_TOKEN}}
+  build-image:
+    runs-on:  ubuntu-latest
+    needs: pre-req
+    
+    steps:
+      - name: build docker image
+        run:  |
+          docker build -t ${{github.repository}}/${{env.IMAGE_NAME}}:latest ./Dockerfile
+          docker build -t ${{github.repository}}/${{env.IMAGE_NAME}}:${{github.ref_name}}
+      - name: list docker images
+        run:  |
+          docker images
+  publish-image:
+    runs-on:  ubuntu-latest
+    needs: build-image
+    steps:
+      - name: pub image
+        run:  |
+          docker push ${{github.repository}}/${{env.IMAGE_NAME}}:latest 
+          docker push ${{github.repository}}/${{env.IMAGE_NAME}}:${{github.ref_name}}
+      
