--- a/.github/workflows/temp2.yml
+++ b/.github/workflows/temp2.yml
@@ -1,41 +1,41 @@
-name: using GHCR
+name: Using GHCR
+
 on:
-    push:
-        branches:   [main, dev]
+  push:
+    branches: [main, dev]
+
 env:
-      IMAGE_NAME: python-image
+  IMAGE_NAME: python-image
+  REGISTRY: ghcr.io
+
 jobs:
-  pre-req:
-    runs-on:  ubuntu-latest
-    env:
-      REGISTRY: ghcr.io
-    steps:
-      - name: to checkout code
-        uses: actions/checkout@v4
-      - name: auth to ghcr
-        uses: docker/login-action@v3
-        with:
-          registry: ${{env.REGISTRY}}
-          username: ${{github.actor}}
-          password: ${{secrets.GITHUB_TOKEN}}
   build-image:
-    runs-on:  ubuntu-latest
-    needs: pre-req
-    
+    runs-on: ubuntu-latest
     steps:
-      - name: build docker image
-        run:  |
-          docker build -t ${{github.repository}}/${{env.IMAGE_NAME}}:latest ./Dockerfile
-          docker build -t ${{github.repository}}/${{env.IMAGE_NAME}}:${{github.ref_name}}
-      - name: list docker images
-        run:  |
-          docker images
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Build Docker image
+        run: |
+          docker build -t ${{ env.REGISTRY }}/${{ github.repository_owner }}/github-exam:latest .
+          docker tag ${{ env.REGISTRY }}/${{ github.repository_owner }}/github-exam:latest \
+                     ${{ env.REGISTRY }}/${{ github.repository_owner }}/github-exam:${{ github.ref_name }}
+
+      - name: List images
+        run: docker images
+
   publish-image:
-    runs-on:  ubuntu-latest
+    runs-on: ubuntu-latest
     needs: build-image
     steps:
-      - name: pub image
-        run:  |
-          docker push ${{github.repository}}/${{env.IMAGE_NAME}}:latest 
-          docker push ${{github.repository}}/${{env.IMAGE_NAME}}:${{github.ref_name}}
-      
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Push images
+        run: |
+          docker push ${{ env.REGISTRY }}/${{ github.repository_owner }}/github-exam:latest
+          docker push ${{ env.REGISTRY }}/${{ github.repository_owner }}/github-exam:${{ github.ref_name }}
