--- a/.github/workflows/temp2.yml
+++ b/.github/workflows/temp2.yml
@@ -27,12 +27,11 @@ jobs:
       - name: List images
         run: docker images
 
-      - name: Login to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      
+
+      - name: Log in to registry
+        run: |
+          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Push images
         run: |
