--- a/.github/workflows/temp2.yml
+++ b/.github/workflows/temp2.yml
@@ -27,7 +27,12 @@ jobs:
       - name: List images
         run: docker images
 
-      
+      # - name: Login to GHCR
+      #   uses: docker/login-action@v3
+      #   with:
+      #     registry: ${{ env.REGISTRY }}
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Log in to registry
         run: |
@@ -36,4 +41,4 @@ jobs:
       - name: Push images
         run: |
           docker push ${{ env.REGISTRY }}/${{ github.repository_owner }}/github-exam:latest
-          docker push ${{ env.REGISTRY }}/${{ github.repository_owner }}/github-exam:${{ github.ref_name }}
+          docker push ${{ env.REGISTRY }}/${{ github.repository_owner }}/github-exam:1.0.0
