--- a/.github/workflows/temp2.yml
+++ b/.github/workflows/temp2.yml
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install MySQL client
-        run: apt-get update &&  apt-get install -y mysql-client
+        run: apt-get update && apt-get install -y mariadb-client
 
       - name: Wait for MySQL
         run: |
