--- a/.github/workflows/temp2.yml
+++ b/.github/workflows/temp2.yml
@@ -5,6 +5,10 @@ on:
 jobs:
   build:
     runs-on:  ubuntu-latest
+    permissions:
+      contents: read
+      actions: read
+      security-events: write 
     steps:
       - name: check out the code
         uses: actions/checkout@v4
