--- a/.github/workflows/temp2.yml
+++ b/.github/workflows/temp2.yml
@@ -2,6 +2,8 @@ name: to use Code QL
 on:
   push:
     branches: [main,dev]
+  pull_request:
+    branches: [main,dev]
 jobs:
   build:
     runs-on:  ubuntu-latest
@@ -20,4 +22,9 @@ jobs:
       #   uses: github/codeql-action/autobuild@v3
       - name: Analysis
         uses: github/codeql-action/analyze@v3
-          
+      - name: download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: python.sarif
+      - name: ls
+        run: ls /home/runner/work/Github-Exam/results/
