--- a/.github/workflows/temp2.yml
+++ b/.github/workflows/temp2.yml
@@ -22,6 +22,11 @@ jobs:
       #   uses: github/codeql-action/autobuild@v3
       - name: Analysis
         uses: github/codeql-action/analyze@v3
+      - name: upload
+        uses: actions/upload-artifact@v4
+        with:
+          name: python.sarif
+          path: python.sarif
       - name: download artifacts
         uses: actions/download-artifact@v4
         with:
