--- a/.github/workflows/temp2.yml
+++ b/.github/workflows/temp2.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           node-version: 24
       - name: cache dependencies
+        id: cacheer
         uses: actions/cache@v3
         with:
           path: ~/.npm
@@ -23,6 +24,7 @@ jobs:
           restore-keys: |
             cache-node-
       - name: init
+        if: ${{steps.cacheer.outputs.cache-hit}} != 'true'
         run: npm ci
       
       
