--- a/.github/workflows/temp2.yml
+++ b/.github/workflows/temp2.yml
@@ -33,6 +33,16 @@ jobs:
         run:  |
             echo  "random=hello hi from ${{github.actor}}" >> $GITHUB_OUTPUT
 
+      - name: create a file
+        run:  |
+            echo "jujueeeee" > tester.txt
+      
+      - name: upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: yoyo
+          path: tester.txt
+
   test:
     runs-on:  ubuntu-latest
     needs: build
@@ -41,6 +51,13 @@ jobs:
         run: echo "${{needs.build.outputs.sample_txt}}"
       - name: to use outputs from other jobss
         run: echo "${{needs.build.outputs.new_text}}"
-
+      - name: download arti
+        uses: actions/download-artifact@v3
+        with:
+          name: yoyo
+      - name: ls
+        run: ls -altrh
+      - name: show the files
+        run: cat  tester.txt
             
             
