--- a/.github/workflows/temp2.yml
+++ b/.github/workflows/temp2.yml
@@ -42,6 +42,7 @@ jobs:
         with:
           name: yoyo
           path: tester.txt
+          retention-days: 7
 
   test:
     runs-on:  ubuntu-latest
