--- a/.github/workflows/temp2.yml
+++ b/.github/workflows/temp2.yml
@@ -5,6 +5,8 @@ on:
 
 jobs:
   build:
+    environment:
+      name: production
     outputs:
       sample_txt: ${{steps.cache-npm.outputs.cache-hit}}
       new_text: ${{steps.ad.outputs.random}}
