--- a/.github/workflows/temp2.yml
+++ b/.github/workflows/temp2.yml
@@ -1,66 +1,21 @@
-name: to use cachee , ouputs, artifacts
-on:
+name: to use matrix 
+on: 
   push:
-    branches: [main ,dev]
-
+    branches: [dev,main]
 jobs:
   build:
-    environment:
-      name: prod
-    outputs:
-      sample_txt: ${{steps.cache-npm.outputs.cache-hit}}
-      new_text: ${{steps.ad.outputs.random}}
-    env:
-      ACTIONS_STEP_DEBUG: true
-    runs-on:  ubuntu-latest
+    strategy:
+      matrix:
+        os: [ ubuntu-latest,macos-latest,windows-latest]
+        node-version: [18,16,20]
+        exclude:
+          - os: macos-latest
+            node-version: 20
+    runs-on:  ${{matrix.os}}
     steps:
-      - name: checkout code
-        uses: actions/checkout@v4
-      - name: setup nodejs
-        uses: actions/setup-node@v6
+      - name: checkout
+        uses: actions/checkout@v3
+      - name: setup node
+        uses: actions/setup-node@v3
         with:
-          node-version: 24
-      - name: cache dependencies
-        id: cache-npm
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: cache-node-${{hashFiles('**/package-lock.json')}}
-          restore-keys: cache-node-
-      - name: init
-        if: steps.cache-npm.outputs.cache-hit != 'true'
-        run: npm ci
-      - name: one more output
-        id: ad
-        run:  |
-            echo  "random=hello hi from ${{github.actor}}" >> $GITHUB_OUTPUT
-
-      - name: create a file
-        run:  |
-            echo "jujueeeee" > tester.txt
-      
-      - name: upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: yoyo
-          path: tester.txt
-          retention-days: 7
-
-  test:
-    runs-on:  ubuntu-latest
-    needs: build
-    steps:
-      - name: to use outputs from other job
-        run: echo "${{needs.build.outputs.sample_txt}}"
-      - name: to use outputs from other jobss
-        run: echo "${{needs.build.outputs.new_text}}"
-      - name: download arti
-        uses: actions/download-artifact@v4
-        with:
-          name: yoyo
-      - name: ls
-        run: ls -altrh
-      - name: show the files
-        run: cat  tester.txt
-            
-            
+          node-version: ${{matrix.node-version}}
