--- a/.github/workflows/temp2.yml
+++ b/.github/workflows/temp2.yml
@@ -4,7 +4,9 @@ on:
     branches: [dev,main]
 jobs:
   build:
+    continue-on-error: true
     strategy:
+      max-parallel: 3
       matrix:
         os: [ ubuntu-latest,macos-latest,windows-latest]
         node-version: [18,16,20]
