--- a/.github/workflows/temp2.yml
+++ b/.github/workflows/temp2.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v4
       - name: using docker container action
         id: dockeraction
-        uses: ./.github/actions/
+        uses: ./.github/actions/docker/
       - name: output of docker container
         run: |
           echo "the ouput from the container is ${{steps.dockeraction.outputs.message}}"
