--- a/.github/actions/docker/Dockerfile
+++ b/.github/actions/docker/Dockerfile
@@ -1,9 +1,8 @@
 FROM ubuntu:20.04
-WORKDIR /app
 ARG DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && apt-get install -y bash
-COPY entrypoint.sh .
-RUN chmod +x entrypoint.sh
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
 
 
