--- a/.github/workflows/temp2.yml
+++ b/.github/workflows/temp2.yml
@@ -8,9 +8,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast:  false
       matrix:
         os: [ubuntu-latest, windows-latest]
-        node: [14, 16]
+        node: [14, 16, 65]
         include:
           - os: macos-latest
             node: 18
