--- a/.github/workflows/temp2.yml
+++ b/.github/workflows/temp2.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast:  false
       matrix:
         os: [ubuntu-latest, windows-latest]
-        node: [14, 16, 65]
+        node: [14, 16, qwe]
         include:
           - os: macos-latest
             node: 18
