--- a/.github/workflows/temp2.yml
+++ b/.github/workflows/temp2.yml
@@ -19,4 +19,6 @@ jobs:
             node: 14
     steps:
     - name: hi
-      run: echo "hi"
+      uses: actions/setup-node@v6
+      with:
+        node-version: ${{matrix.node}}
