--- a/.github/workflows/temp2.yml
+++ b/.github/workflows/temp2.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
-      fail-fast:  false
+      fail-fast:  true
       matrix:
         os: [ubuntu-latest, windows-latest]
         node: [14, 16, qwe]
