--- a/.github/workflows/temp2.yml
+++ b/.github/workflows/temp2.yml
@@ -22,3 +22,9 @@ jobs:
       uses: actions/setup-node@v6
       with:
         node-version: ${{matrix.node}}
+  test:
+    runs-on:  ubuntu-latest
+    steps:
+      - name: asas
+        run: |
+          echo "hi"     
